tests also for new branch

--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -5,9 +5,9 @@ name: Python application
 
 on:
   push:
-    branches: [ main new_architecture ]
+    branches: [ main, new_architecture ]
   pull_request:
-    branches: [ main new_architecture ]
+    branches: [ main, new_architecture ]
 
 permissions:
   contents: read
