all basic tests, except for the new one should now run through on github

--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -30,4 +30,4 @@ jobs:
         if [ -f "${GITHUB_WORKSPACE}/requirements.txt" ]; then pip install -r "${GITHUB_WORKSPACE}/requirements.txt"; fi
     - name: Test with Shellscript
       run: |
-        "${GITHUB_WORKSPACE}/run_tests.sh" "79"
+        "${GITHUB_WORKSPACE}/run_tests.sh" "79" "basic"
