--- a/.github/workflows/create_executable.yml
+++ b/.github/workflows/create_executable.yml
@@ -1,3 +1,18 @@
+# This is a workflow for testing various Nuitka command-line options
+
+name: Build-All-Platforms
+
+# Controls when the workflow will run
+on:
+  # Triggers the workflow on push or pull request events but only for the "main" branch
+  push:
+    branches: ["main"]
+
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
+
+# This workflow will install Python dependencies, run tests and lint with a single version of Python
+# For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
 jobs:
   build:
     strategy:
