--- a/.github/workflows/create_executable.yml
+++ b/.github/workflows/create_executable.yml
@@ -1,5 +1,3 @@
-# This is a workflow for testing various Nuitka command-line options
-
 name: Build-All-Platforms
 
 # Controls when the workflow will run
@@ -11,19 +9,19 @@ on:
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
-# This workflow will install Python dependencies, run tests and lint with a single version of Python
-# For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
+
 jobs:
   build:
     strategy:
+      fail-fast: false
       matrix:
         os: [macos-latest, ubuntu-latest, windows-latest]
 
     runs-on: ${{ matrix.os }}
 
     steps:
-      - name: Check-out repository
-        uses: actions/checkout@v3
+      # Check-out repository
+      - uses: actions/checkout@v3
 
       - name: Setup Python
         uses: actions/setup-python@v4
@@ -33,18 +31,20 @@ jobs:
           cache: 'pip'
           cache-dependency-path: |
             **/requirements*.txt
-
+      # Install dependencies
       - name: Install Dependencies
         run: |
-          pip install -r requirements.txt -r requirements-dev.txt
-
-      - Name: Build Executable
-        uses: Nuitka/Nuitka-Action@v0.4
+          pip install -r requirements.txt
+      # Build python script into a stand-alone exe
+      - uses: jimkring/python-script-to-exe@v0.2.0
         with:
-          script-name: kasa_cli
+          script-name: test.py
           onefile: true
+          # access-token: ${{ secrets.NUITKA_COMMERCIAL_ACCESS_TOKEN }}
+          # macos-create-app-bundle: ${{ runner.os == 'macOS' }}
 
-      - name: Upload Artifacts
+      # Uploads artifacts
+      - name: "Upload Artifacts"
         uses: actions/upload-artifact@v3
         with:
           name: ${{ runner.os }} Build
@@ -52,3 +52,4 @@ jobs:
             build/*.exe
             build/*.bin
             build/*.app/**/*
+
