--- a/.github/workflows/create_executable.yml
+++ b/.github/workflows/create_executable.yml
@@ -1,56 +1,25 @@
-name: Build-All-Platforms
+name: Package Application with Pyinstaller
 
-# Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the "main" branch
   push:
-    branches: ["master"]
-
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
+    branches: [ master ]
+  pull_request:
+    branches: [ master ]
 
 jobs:
   build:
-    strategy:
-      fail-fast: false
-      matrix:
-        os: [macos-latest, ubuntu-latest, windows-latest]
 
-    runs-on: ${{ matrix.os }}
+    runs-on: ubuntu-latest
 
     steps:
-      # Check-out repository
-      - uses: actions/checkout@v3
+    - uses: actions/checkout@v2
 
-      - name: Setup Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.10' # Version range or exact version of a Python version to use, using SemVer's version range syntax
-          architecture: 'x64' # optional x64 or x86. Defaults to x64 if not specified
-          cache: 'pip'
-          cache-dependency-path: |
-            **/requirements*.txt
+    - name: Package Application
+      uses: JackMcKew/pyinstaller-action-windows@main
+      with:
+        path: src
 
-      # Install dependencies
-      - name: Install Dependencies
-        run: |
-          pip install -r requirements.txt
-
-      # Build python script into a stand-alone exe
-      - uses: jimkring/python-script-to-exe@v0.2.0
-        with:
-          script-name: ./src/main.py
-          onefile: true
-          # access-token: ${{ secrets.NUITKA_COMMERCIAL_ACCESS_TOKEN }}
-          # macos-create-app-bundle: ${{ runner.os == 'macOS' }}
-
-      # Uploads artifacts
-      - name: "Upload Artifacts"
-        uses: actions/upload-artifact@v3
-        with:
-          name: ${{ runner.os }} Build
-          path: |
-            build/*.exe
-            build/*.bin
-            build/*.app/**/*
-
+    - uses: actions/upload-artifact@v2
+      with:
+        name: name-of-artifact
+        path: src/dist/windows
