--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -27,7 +27,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        if [ -f "${GITHUB_WORKSPACE}/src/requirements.txt" ]; then pip install -r "${GITHUB_WORKSPACE}/src/requirements.txt"; fi
+        if [ -f "${GITHUB_WORKSPACE}/requirements.txt" ]; then pip install -r "${GITHUB_WORKSPACE}/requirements.txt"; fi
     - name: Test with Shellscript
       run: |
         "${GITHUB_WORKSPACE}/run_tests.sh" "79"
