--- a/.github/workflows/create_executable.yml
+++ b/.github/workflows/create_executable.yml
@@ -5,6 +5,8 @@ name: Package Application with Pyinstaller
 on:
   push:
     branches: [ master ]
+  pull_request:
+    branches: [ master ]
 
 jobs:
   build:
@@ -32,7 +34,7 @@ jobs:
         run: pyinstaller src/main.spec
 
       - name: Tar files
-        run: tar -cvf picoc_compiler.tar src/dist/picoc_compiler
+        run: tar -cvf picoc_compiler.tar dist/picoc_compiler
 
       - name: Upload Artifact
         uses: actions/upload-artifact@v3
