--- a/.github/workflows/create_executable_windows.yml
+++ b/.github/workflows/create_executable_windows.yml
@@ -1,4 +1,7 @@
-# based on: https://github.com/qutebrowser/qutebrowser/blob/master/.github/workflows/nightly.yml
+# resources: https://github.com/qutebrowser/qutebrowser/blob/master/.github/workflows/nightly.yml
+# https://github.com/JackMcKew/pyinstaller-action-windows,
+# https://github.com/Nuitka/Nuitka-Action
+# https://docs.github.com/en/actions/using-workflows/workflow-syntax-for-github-actions
 
 name: Package Application with Pyinstaller
 
@@ -11,7 +14,7 @@ on:
 jobs:
   build:
 
-    runs-on: ubuntu-latest
+    runs-on: windows-2019
 
     steps:
       - name: Checkout Master Branch
@@ -38,5 +41,5 @@ jobs:
       - name: Upload Artifact
         uses: actions/upload-artifact@v3
         with:
-          name: PicoC-Compiler
+          name: PicoC-Compiler-Windows
           path: dist/picoc_compiler
