--- a/.github/workflows/create_executable_linux.yml
+++ b/.github/workflows/create_executable_linux.yml
@@ -3,7 +3,7 @@
 # https://github.com/Nuitka/Nuitka-Action
 # https://docs.github.com/en/actions/using-workflows/workflow-syntax-for-github-actions
 
-name: Package Application with Pyinstaller
+name: Package Application Linux
 
 on:
   push:
