--- a/.github/workflows/create_executable.yml
+++ b/.github/workflows/create_executable.yml
@@ -14,16 +14,16 @@ on:
 
 jobs:
   build:
-    name: Publish for ${{ matrix.os }}
+    name: Package for ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
         include:
           - os: ubuntu-latest
             artifact_name: PicoC-Compiler-Linux
-          - os: windows-2019
+          - os: windows-latest
             artifact_name: PicoC-Compiler-Windows
-          - os: macos-2019
+          - os: macos-latest
             artifact_name: PicoC-Compiler-MacOs
 
     steps:
