--- a/.github/workflows/create_executable.yml
+++ b/.github/workflows/create_executable.yml
@@ -15,6 +15,9 @@ on:
     branches: [ master ]
     tags:
       - "*"
+  workflow_dispatch:
+    tags:
+      - "*"
 
 jobs:
   build:
@@ -39,6 +42,10 @@ jobs:
         with:
           ref: "master"
 
+      - name: Get Documentation
+        run: cd src
+          git clone https://github.com/matthejue/Bachelorarbeit_Dokumentation_out depth=1
+
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
@@ -53,7 +60,8 @@ jobs:
         run: pyinstaller src/main.spec
 
       - name: Tar files
-        run: tar -zcvf picoc_compiler.tar.gz dist/picoc_compiler
+        run: cd dist
+          tar -zcvf picoc_compiler.tar.gz picoc_compiler
 
       # - name: Upload Artifact
         # uses: actions/upload-artifact@v3
@@ -65,7 +73,7 @@ jobs:
         uses: svenstaro/upload-release-action@v2
         with:
           repo_token: ${{ secrets.UPLOAD_TO_REPO }}
-          file: picoc_compiler.tar.gz
+          file: dist/picoc_compiler.tar.gz
           asset_name: ${{ matrix.asset_name }}
           tag: ${{ github.ref }}
           overwrite: true
