--- a/.github/workflows/create_executable.yml
+++ b/.github/workflows/create_executable.yml
@@ -16,9 +16,7 @@ on:
     branches: [ master ]
     tags:
       - "*"
-  workflow_dispatch:
-    tags:
-      - "*"
+  # workflow_dispatch:
 
 jobs:
   build:
