--- a/.github/workflows/create_executable.yml
+++ b/.github/workflows/create_executable.yml
@@ -8,15 +8,17 @@
 name: Package Application
 
 on:
-  push:
-    branches: [ master ]
+  # push:
+  #   branches: [ master ]
+  #   tags:
+  #     - "*"
+  # pull_request:
+  #   branches: [ master ]
+  #   tags:
+  #     - "*"
+  workflow_dispatch:
     tags:
       - "*"
-  pull_request:
-    branches: [ master ]
-    tags:
-      - "*"
-  # workflow_dispatch:
 
 jobs:
   build:
