renamed github actions

--- a/.github/workflows/create_executables.yml
+++ b/.github/workflows/create_executables.yml
@@ -5,7 +5,7 @@
 # https://github.com/svenstaro/upload-release-action
 # https://blog.knoldus.com/manual-trigger-in-github-actions/
 
-name: Package Application
+name: create executables
 
 on:
   workflow_dispatch:
