--- a/.github/workflows/create_executables.yml
+++ b/.github/workflows/create_executables.yml
@@ -33,7 +33,7 @@ jobs:
           - os: windows-latest
             artifact_name: PicoC-Compiler-Windows
             asset_name: picoc_compiler_windows_amd64.tar.gz
-          - os: macos-latest
+          - os: macos-11  # macos-latest
             artifact_name: PicoC-Compiler-MacOs
             asset_name: picoc_compiler_macos_amd64.tar.gz
 
