Changed testsystem to use the RETI-Interpreter: https://github.com/matthejue/RETI-Interpreter instead of the built-in RETI-Interpreter

--- a/.gitignore
+++ b/.gitignore
@@ -25,12 +25,12 @@ README.txt
 *.reti
 *.error
 *.c
-*.c_out
+*.c_output
 *.reti_tokens
 *.reti_ast
-*.in
-*.out
-*.out_expected
+*.input
+*.output
+*.expected_output
 *.datasegment_size
 *.reti_states
 *.eprom
