--- a/.github/workflows/run_sys_tests.yml
+++ b/.github/workflows/run_sys_tests.yml
@@ -1,7 +1,4 @@
-# This workflow will install Python dependencies, run tests and lint with a single version of Python
-# For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
-
-name: run tests
+name: run system tests
 
 on:
   push:
@@ -23,11 +20,15 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: "3.10"
-      # run: sudo apt install python3
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         if [ -f "${GITHUB_WORKSPACE}/requirements.txt" ]; then pip install -r "${GITHUB_WORKSPACE}/requirements.txt"; fi
+    - name: Install RETI-Interpeter
+      run: |
+        git clone https://github.com/matthejue/PicoC-Compiler.git
+        cd PicoC-Compiler
+        make install-linux-local
     - name: Test with Shellscript
       run: |
-        "${GITHUB_WORKSPACE}/run_tests.sh" "79"
+        "${GITHUB_WORKSPACE}/run_sys_tests.sh" "79"
