--- a/.github/workflows/run_sys_tests.yml
+++ b/.github/workflows/run_sys_tests.yml
@@ -22,8 +22,8 @@ jobs:
         python-version: "3.10"
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
-        if [ -f "${GITHUB_WORKSPACE}/requirements.txt" ]; then pip install -r "${GITHUB_WORKSPACE}/requirements.txt"; fi
+        cd ${GITHUB_WORKSPACE}
+        make install-dependencies
     - name: Install RETI-Interpeter
       run: |
         git clone https://github.com/matthejue/RETI-Interpreter.git
