hopefully fixed bug in github action for test running, wrong directory

--- a/.github/workflows/run_sys_tests.yml
+++ b/.github/workflows/run_sys_tests.yml
@@ -31,4 +31,5 @@ jobs:
         make install-linux-local
     - name: Test with Shellscript
       run: |
-        "${GITHUB_WORKSPACE}/run_sys_tests.sh" "79"
+        cd ${GITHUB_WORKSPACE}
+        ./run_sys_tests.sh 79
