--- a/.github/workflows/run_sys_tests.yml
+++ b/.github/workflows/run_sys_tests.yml
@@ -32,4 +32,4 @@ jobs:
     - name: Test with Shellscript
       run: |
         cd ${GITHUB_WORKSPACE}
-        ./run_sys_tests.sh 79
+        make test
