small fix to github action for running tests such that it stops failing

--- a/.github/workflows/run_sys_tests.yml
+++ b/.github/workflows/run_sys_tests.yml
@@ -32,5 +32,5 @@ jobs:
     - name: Test with Shellscript
       run: |
         cd ${GITHUB_WORKSPACE}
-        ./run_sys_tests.sh 79 all
+        ./run_sys_tests.sh 79
 
