small readability improvements to github actions

--- a/.github/workflows/run_sys_tests.yml
+++ b/.github/workflows/run_sys_tests.yml
@@ -2,9 +2,13 @@ name: run system tests
 
 on:
   push:
-    branches: [ master, new_architecture ]
+    branches: [ master ]
+    tags:
+      - "*"
   pull_request:
-    branches: [ master, new_architecture ]
+    branches: [ master ]
+    tags:
+      - "*"
 
 permissions:
   contents: read
