--- a/.github/workflows/create_executables.yml
+++ b/.github/workflows/create_executables.yml
@@ -50,7 +50,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: "latest"
+          python-version: "3.12"
           architecture: "x64"
 
       - name: Install dependencies
